--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:8080",
+  "proxy": "https://mernexample.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
