--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://mernexample.onrender.com",
+  "proxyXX": "https://mernexample.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
